@@ -1,11 +1,13 @@
+import doctest
 import unittest
+
 from zope.component import testing
-from zope.testing import doctestunit
+
 
 def test_suite():
     return unittest.TestSuite((
-        doctestunit.DocFileSuite('formlib.txt',
-                                 package='plone.app.form',
-                                 setUp=testing.setUp,
-                                 tearDown=testing.tearDown),
+        doctest.DocFileSuite('formlib.txt',
+                             package='plone.app.form',
+                             setUp=testing.setUp,
+                             tearDown=testing.tearDown),
         ))
